# Solve-Heat-Equation

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile  Makefile.am  data.h5  error_norm.cc  error_norm.h  hd_prep.cc  hd_prep.h  hdf5_output.cc  hdf5_output.h  heat.cc  masa_arrays.cc  masa_arrays.h  matrices.cc  matrices.h  node_val_check.cc  node_val_check.h  numerical_solve.cc  numerical_solve.h  parameter_check.cc  parameter_check.h  parser.cc  parser.h  petsc_error.cc  petsc_error.h  petsc_masa.cc  petsc_masa.h  petsc_setup.cc  petsc_setup.h  petsc_solve.cc  petsc_solve.h  reg_test.sh
tests/: Makefile.am  petsc_reg_test.sh  reg_test.sh
tests/hdf_tests/: data_gs1d_2f.h5  data_gs1d_4f.h5  data_gs2d_2f.h5  data_gs2d_4f.h5  data_jac1d.h5  data_jac2d.h5  pet1dFourA.h5  pet1dTwoA.h5  pet2dFourA.h5  pet2dTwoA.h5
